<resources>
    <string name="app_name">TallerUnimagUno</string>
    <string name="Ingresar">INGRESAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="usuario">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="matematicas">MATEMATICAS</string>
    <string name="fisicas">FISICAS</string>
    <string name="estadisticas">ESTADISTICA</string>
    <string name="texto">TEXTO</string>
    <string name="numero2">NUMERO2</string>
    <string name="numero1">NUMERO1</string>

    <string name="calcular">CALCULAR</string>
    <string name="borrar_dato">BORRAR DATO</string>
    <string name="suma">SUMA</string>
    <string name="multiplicacion">MULTIPLICACION</string>
    <string name="potencia">POTENCIA</string>

</resources>